bug 13526 - allowed cellpadding, cellspacing to be percent value